<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/info"
            android:textSize="18dp"
            android:textColorHint="@color/color_gris90"
            android:textAlignment="center"
            android:gravity="center_horizontal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@drawable/camp_text2"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_person"
                android:layout_marginLeft="5dp"
                />


            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/nombre"
                android:inputType="textAutoComplete"
                android:textColorHint="@color/color_gris60"
                android:background="@drawable/camp_text3"
                android:textColor="@color/color_black"
                android:textAlignment="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/lbl_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            android:textSize="10dp"
            android:textColorHint="@color/color_black"
            android:textAlignment="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@drawable/camp_text2"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_email"
                android:layout_marginLeft="5dp"
                />


            <EditText
                android:id="@+id/txt_correo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/correo"
                android:inputType="textAutoComplete"
                android:textColorHint="@color/color_gris60"
                android:background="@drawable/camp_text3"
                android:textColor="@color/color_black"
                android:textAlignment="center" />

        </LinearLayout>


        <TextView
            android:id="@+id/lbl_adv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/diew_email"
            android:textSize="10dp"
            android:textColorHint="@color/color_black"
            android:textAlignment="center" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@drawable/camp_text2"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:src="@drawable/celular"
                android:layout_marginLeft="5dp"
                />


            <EditText
                android:id="@+id/txt_celular"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/celular"
                android:inputType="number"
                android:textColorHint="@color/color_gris60"
                android:background="@drawable/camp_text3"
                android:textColor="@color/color_black"
                android:textAlignment="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/lbl_descripcion_cell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dig_cel"
            android:textSize="10dp"
            android:textColorHint="@color/color_black"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@drawable/camp_text2"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:src="@drawable/documento"
                android:layout_marginLeft="5dp"
                />


            <EditText
                android:id="@+id/txt_documento"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/documento"
                android:inputType="number"
                android:textColorHint="@color/color_gris60"
                android:background="@drawable/camp_text3"
                android:textColor="@color/color_black"
                android:textAlignment="center" />

        </LinearLayout>




        <TextView
            android:id="@+id/lbl_descripcion_documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/documento_cc"
            android:textSize="10dp"
            android:textColorHint="@color/color_black"
            android:textAlignment="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@drawable/camp_text2"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:src="@drawable/clave"
                android:layout_marginLeft="5dp"
                />


            <EditText
                android:id="@+id/txt_clave"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/txt_clave"
                android:inputType="textPassword"
                android:textColorHint="@color/color_gris60"
                android:background="@drawable/camp_text3"
                android:textColor="@color/color_black"
                android:textAlignment="center" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_registro"
                android:text="@string/registrarme"
                android:background="@drawable/estilo_boton"
                android:textColor="@color/color_white"

                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>