<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearQr"
        android:visibility="visible"
        android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

<Switch
    android:id="@+id/switch_a"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    android:textColor="@color/color_gris100"
    android:textSize="18sp"
    android:text="@string/aco"/>

        <LinearLayout
            android:id="@+id/linear_acom"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/camp_text2"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_person"
                android:layout_marginLeft="5dp"
                />


            <EditText
                android:id="@+id/txt_acomp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/cuantos"
                android:inputType="number"
                android:textColorHint="@color/color_gris60"
                android:background="@drawable/camp_text3"
                android:textColor="@color/color_black"
                android:textAlignment="center" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/img_qr"
                android:background="@drawable/iconqr"
                />

            <com.example.incomecontrol.customfonts.MyTextView_Poppins_SemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_qr"
                android:text="@string/escanear"
                android:textColor="@color/color_gris100"
                android:textSize="31.3sp"
                />




        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_publi"
        android:orientation="vertical"
        android:background="@drawable/publi"
        android:visibility="visible">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:id="@+id/imgPublicidad"
            android:visibility="gone"
            android:src="@drawable/close_whithe"
            android:layout_gravity="right"

         />



    </FrameLayout>
</LinearLayout>